SubBt/force-app/main/default/objects/Amazon_S3_Key__c/Amazon_S3_Key__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is protected custom setting to store AWS S3 Keys.</description>
    <label>BT Amazon S3 Key</label>
</CustomObject>