SubBt/force-app/main/default/objects/Amazon_S3_Key__c/fields/Configured_Value__c.field-meta.xml
<CustomField>
    <fullName>Configured_Value__c</fullName>
    <description>Amazon S3 Key value.</description>
    <inlineHelpText>Amazon S3 Key value.</inlineHelpText>
    <label>Configured Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>