SubBt/force-app/main/default/objects/Amazon_S3_Key__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Amazon S3 Key.</description>
    <inlineHelpText>Description of Amazon S3 Key.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>