SubBt/force-app/main/default/objects/Amazon_S3_Key__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label for Amazon S3 Key.</description>
    <inlineHelpText>This will be displayed as Name on System Configuration Page.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>